--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Git San tar</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum enim ipsa cum soluta voluptate, recusandae obcaecati ipsum libero esse, accusamus praesentium sit nemo. Hic pariatur, dolor esse blanditiis minima aperiam.</p>
     <script src="js/app.js"></script>
 </body>
 </html>
